@@ -1,8 +1,11 @@
 {{$NEXT}}
 
+    [ ENHANCEMENTS ]
     * New keyword 'plugin_args' exported by Dancer::Plugin to provide
       a consistent way with Dancer 2 to obtain arguments from a plugin
       keyword. (Alberto Simões).
+    * Add an alias 'execute_hook' to 'execute_hooks' for homogeneity
+      with Dancer 2.
 
 1.3097      08.07.2012
 
